compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_const_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const foo = 1\nfn foo() { 2 }"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:1:7
  │
1 │ const foo = 1
  │       ^^^ First defined here
2 │ fn foo() { 2 }
  │ ^^^^^^^^ Redefined here

`foo` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

